common/uptime-kuma/service.yaml
apiVersion: v1
kind: Service
metadata:  
  name: service
  namespace: uptime-kuma
spec:
  selector:
    app: uptime-kuma
  ports:  
  - port: 3001
    protocol: TCP
