common/uptime-kuma/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.allow-http: "true"
    kubernetes.io/ingress.class: gce
  name: uptime-kuma-ingress
  namespace: uptime-kuma
spec:
  rules:
  - host: kuma.k8s.pyeong.tech
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: uptime-kuma
              port:
                number: 6600
